; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnxt/extr_bnxt.c_bnxt_setup_int_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnxt/extr_bnxt.c_bnxt_setup_int_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnxt = type { i32 }

@BNXT_FLAG_USING_MSIX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bnxt*)* @bnxt_setup_int_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bnxt_setup_int_mode(%struct.bnxt* %0) #0 {
  %2 = alloca %struct.bnxt*, align 8
  %3 = alloca i32, align 4
  store %struct.bnxt* %0, %struct.bnxt** %2, align 8
  %4 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %5 = getelementptr inbounds %struct.bnxt, %struct.bnxt* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @BNXT_FLAG_USING_MSIX, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %12 = call i32 @bnxt_setup_msix(%struct.bnxt* %11)
  br label %16

13:                                               ; preds = %1
  %14 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %15 = call i32 @bnxt_setup_inta(%struct.bnxt* %14)
  br label %16

16:                                               ; preds = %13, %10
  %17 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %18 = call i32 @bnxt_set_real_num_queues(%struct.bnxt* %17)
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @bnxt_setup_msix(%struct.bnxt*) #1

declare dso_local i32 @bnxt_setup_inta(%struct.bnxt*) #1

declare dso_local i32 @bnxt_set_real_num_queues(%struct.bnxt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
